# neogameserver

./: CMakeLists.txt  README.md
chat/: CMakeLists.txt
client/: CMakeLists.txt
metaserver/: CMakeLists.txt
metaserver/config/: metaserver.rjson
metaserver/hdr/: metaserver.hpp
metaserver/src/: main.cpp  metaserver.cpp
server/: CMakeLists.txt
server/config/: server.rjson
