file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
file(GLOB_RECURSE LOCAL_HEADER_FILES hdr/*.*)

set(HEADER_FILES
	${HEADER_FILES}
	${LOCAL_HEADER_FILES}
	PARENT_SCOPE)

add_library(client ${SOURCE_FILES} ${PLATFORM_SOURCE_FILES} ${LOCAL_HEADER_FILES} ${HEADER_FILES})
target_include_directories(client PUBLIC
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
set_property(TARGET client PROPERTY CXX_STANDARD 20)
set_property(TARGET client PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET client PROPERTY CXX_VISIBILITY_PRESET hidden)
set_property(TARGET client PROPERTY SOVERSION ${PROJECT_VERSION_MAJOR})
set_property(TARGET client PROPERTY VERSION ${PROJECT_VERSION})





